2018-02-07 Satya Panuganti <prakashsatya10@gmail.com>

-Removed create_dictionary binary file

/************************************************************************/

2018-02-07 Satya Panuganti <prakashsatya10@gmail.com>

-Modified GUI to deal with only grayscale images.
-Completed Inpainting via Sparse.
-Need to perform tests.

/************************************************************************/

2018-02-07 Satya Panuganti <prakashsatya10@gmail.com>

-Modified SparseInpaint class present in code/algos to load a dictionary
 from a path.
-Need to find a way to remove columns based on mask.

/************************************************************************/

2018-02-07 Satya Panuganti <prakashsatya10@gmail.com>

-Modified create_dictionary to store greyscale images.
-Implemented an untested version of OMP in code/algos/

/************************************************************************/

2018-02-07 Satya Panuganti <prakashsatya10@gmail.com>

-Fixed bug in create_dictionary.cxx

/************************************************************************/

2018-02-07 Satya Panuganti <prakashsatya10@gmail.com>

-Added file code/tools/create_dictionary.cxx which generates a binary
-create_dictionary which can be used to create the dictionary.

/************************************************************************/

2018-02-06 Satya Panuganti <prakashsatya10@gmail.com>

-Changed Criminisi to SparseInpaint
-Changed criminisi to sparse_inpaint
-Removed *.a files

/************************************************************************/

2018-02-06 Satya Panuganti <prakashsatya10@gmail.com>

-Changed EE604A namespace to EE698K
-Removed object, dependancy and binary files.
-Added sparse_inpaint.h and sparse_inpaint.cxx to the directory code/tools.

/************************************************************************/

2018-02-06 Satya Panuganti <prakashsatya10@gmail.com>
