@@ -1,19 +1,20 @@
 #include "../include/omp.h"
 
+#include <opencv2/core/core.hpp>
+#include <opencv2/imgproc/imgproc.hpp>
+
 #include <iostream>
+#include <cmath>
 
 /*****************************************************************************/
 
-constexpr double epsilon = 1e-4;
-constexpr int tau = 10;
+constexpr double epsilon = 1e-3;
+constexpr int tau = 40;
 
 /*****************************************************************************/
 
 cv::Mat_<double> omp (const cv::Mat_<double>& D, const cv::Mat_<double>& X)
 {
-    std::cerr << "D size : " << D.size() << " X size : " << X.size()
-              << std::endl;
-    
     cv::Mat_<double> phi;
     const int num_atoms = D.cols;
     
@@ -29,7 +30,7 @@ cv::Mat_<double> omp (const cv::Mat_<double>& D, const cv::Mat_<double>& X)
         
         for (int i = 0; i < num_atoms; ++i) {
             
-            const double inner = r.dot (D.col (i));
+            const double inner = std::abs (r.dot (D.col (i)));
             
             if (inner > best_inner) {
                 
@@ -51,11 +52,16 @@ cv::Mat_<double> omp (const cv::Mat_<double>& D, const cv::Mat_<double>& X)
         
         r = X - phi * a;
         
-        std::cout << "norm " << cv::norm (r) << std::endl;
+        cv::Mat_<double> zoomX, zoomX_;
+        cv::resize (X, zoomX, cv::Size (300, X.rows));
+        cv::resize (phi * a, zoomX_, cv::Size (300, X.rows));
+        
         ++count;
     }
     
-    cv::Mat_<double> a_ = cv::Mat_<double> (D.cols, 1);
+    cv::Mat_<double> a_ = cv::Mat_<double>::zeros (D.cols, 1);
+    
+    std::cout << "sparsity " << count << std::endl;
     
     count = 0;
     cv::MatConstIterator_<double> it = a.begin();
@@ -63,7 +69,7 @@ cv::Mat_<double> omp (const cv::Mat_<double>& D, const cv::Mat_<double>& X)
     
     while (it != it_end) {
         
-        a_.at<double> (col_order[count]) = *it;
+        a_.at<double> (col_order[count++]) = *it;
         ++it;
     }
     
