@@ -1,10 +1,16 @@
-2018-02-07 Satya Panuganti <prakashsatya10@gmail.com>
+2018-02-09 Satya Panuganti <prakashsatya10@gmail.com>
+
+-Fixed bugs in code/algos/src/omp.cxx and code/algos/src/sparse_inpaint.cxx
+
+/************************************************************************/
+
+2018-02-08 Satya Panuganti <prakashsatya10@gmail.com>
 
 -Removed create_dictionary binary file
 
 /************************************************************************/
 
-2018-02-07 Satya Panuganti <prakashsatya10@gmail.com>
+2018-02-08 Satya Panuganti <prakashsatya10@gmail.com>
 
 -Modified GUI to deal with only grayscale images.
 -Completed Inpainting via Sparse.
